# nmweb

./: .gitignore  devenv.nix  flake.nix  nmweb.cabal
src/: Handler.hs  Htmx.hs  Main.hs
src/Templates/: About.hs  Head.hs  MissingPage.hs  Projects.hs  Root.hs
src/Utils/: Htmx.hs
