cabal-version:   3.0
name:            nmweb
version:         0.1.0.0
license:         NONE
author:          Neelzee
maintainer:      nilsien2001@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable nmweb
    import:           warnings
    other-modules:    Handler
                    , Utils.Htmx
                    , Templates.Root
                    , Templates.Head
                    , Templates.MissingPage
                    , Templates.Projects
                    , Templates.About
    main-is:          Main.hs
    build-depends:    base
                    , happstack-server
                    , blaze-html
                    , blaze-markup
    hs-source-dirs:   src
    default-language: Haskell2010
